[project]
name = "loc2vec"
version = "0.0.1"
description = "PyTorch implementation of Loc2Vec as specified in the blog post https://sentiance.com/loc2vec-learning-location-embeddings-w-triplet-loss-networks"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE.txt"}
classifiers = [
"Development Status :: 3 - Alpha",
"Programming Language :: Python :: 3",
]
dependencies = [
"numpy",
"matplotlib"
]

[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"